[package]
edition.workspace = true
name = "qtun-server"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hala-qtun = {workspace = true, features = ["server", "app"]}
hala-rs = {workspace = true}
log = {workspace = true}
pretty_env_logger = {workspace = true}
