[package]
description = "Quic-based tunneling protocol using the hala-rproxy framework"
documentation = "https://docs.rs/hala-qtun"
edition.workspace = true
license = "MIT"
name = "hala-qtun"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hala-rs = {workspace = true}

clap = {workspace = true, optional = true}
duration-str = {workspace = true}
futures = {workspace = true}
log = {workspace = true}

[features]
app = ["clap"]
client = []
default = ["app", "client", "server"]
server = []

[package.metadata.docs.rs]
all-features = true
