[package]
description = "Quic-based tunneling protocol using the hala-rproxy framework"
documentation = "https://docs.rs/hala-qtun"
edition.workspace = true
license = "MIT"
name = "hala-qtun"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasi = { workspace = true }
rasi-ext = { workspace = true, features = ["quic"] }

clap = { workspace = true, optional = true }
duration-str = { workspace = true }
futures = { workspace = true }
log = { workspace = true }

[features]
default = ["app", "client", "server"]

app = []
client = ["clap"]
server = ["clap"]

[package.metadata.docs.rs]
all-features = true
